# cmake-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_linux-x64_debug.yml  build_linux-x64_release.yml  build_win-x64_debug.yml  build_win-x64_release.yml
src/: calc.cpp  calc.h  export.h
tests/: test_calc.cpp
